Enhance Bicameral Agent with Hebbian Fast Weights and Intrinsic Motivation
- Modified EpisodicMemory to store surprise for prioritized replay.
- Updated System1 to include Hebbian fast weights for one-shot learning.
- Implemented Hebbian weight updates based on action and reward.
- Enhanced System2 to predict confidence based on rewards.
- Integrated intrinsic motivation through surprise calculation in the agent's step function.
- Updated simulation and visual simulation scripts to reflect changes in agent behavior and output.
- Improved memory management with prioritized experience replay based on surprise.
- Added functionality to save and load agent weights for persistence.

--- a/02_Learning_and_Dreaming.ipynb
+++ b/02_Learning_and_Dreaming.ipynb
@@ -16,13 +16,17 @@
     "This notebook demonstrates the **Dreaming / Sleep Consolidation** phase of consciousness.\n",
     "\n",
     "During dreaming, the agent:\n",
-    "1. Replays experiences from memory (episodic recall)\n",
-    "2. Trains the World Model to predict future states\n",
-    "3. Updates System 1 policy based on consolidated knowledge\n",
-    "4. Strengthens important memories while weakening noise\n",
+    "1. Replays experiences from memory using **Prioritized Experience Replay** (focusing on high-surprise events).\n",
+    "2. Trains the World Model to predict future states.\n",
+    "3. Updates System 1 policy based on consolidated knowledge.\n",
+    "4. Strengthens important memories while weakening noise.\n",
     "\n",
     "This is inspired by neuroscience: the hippocampus replays experiences during REM sleep,\n",
-    "and these replays strengthen cortical connections (systems consolidation theory)."
+    "and these replays strengthen cortical connections (systems consolidation theory).\n",
+    "\n",
+    "**New Features Enabled:**\n",
+    "*   **Intrinsic Motivation (Curiosity):** The agent learns online from \"surprise\" (prediction error).\n",
+    "*   **Prioritized Replay:** The agent dreams specifically about the things it got wrong.\n"
    ]
   },
   {
@@ -82,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7b5a6f86",
    "metadata": {},
    "outputs": [
@@ -105,33 +109,37 @@
     "# Metrics\n",
     "prediction_errors_day1 = []\n",
     "\n",
-    "print(\"☀️ Day 1 begins (Exploration)...\")\n",
+    "print(\"☀️ Day 1 begins (Active Exploration with Curiosity)...\")\n",
     "\n",
     "# Initial state\n",
     "state = mx.random.normal((128,))\n",
+    "last_reward = 0.0\n",
     "\n",
     "for t in range(steps):\n",
     "    # Agent chooses action\n",
-    "    decision = agent.step(state)\n",
+    "    # We pass the reward from the previous step so the agent can learn online\n",
+    "    decision = agent.step(state, reward=last_reward)\n",
     "    action_idx = decision['action']\n",
     "    \n",
     "    # One-hot encode action\n",
     "    action_vec = mx.zeros((5,))\n",
     "    action_vec[action_idx] = 1.0\n",
     "    \n",
-    "    # Get predicted next state (imagination)\n",
-    "    predicted_next_state = agent.world_model(state, action_vec)\n",
-    "    \n",
     "    # Environment reaction\n",
     "    actual_next_state = environment_step(state, action_vec)\n",
     "    \n",
     "    # Measure error (surprise)\n",
+    "    # Note: The agent calculates this internally now (decision['surprise']), \n",
+    "    # but we calculate it here again to track the raw physics error for our plot.\n",
+    "    predicted_next_state = agent.world_model(state, action_vec)\n",
     "    error = mx.mean((predicted_next_state - actual_next_state) ** 2).item()\n",
     "    prediction_errors_day1.append(error)\n",
     "    \n",
     "    # Update state and reward\n",
     "    state = actual_next_state\n",
-    "    reward = -error  # Negative error as reward\n",
+    "    # The external reward is negative error (punishment for being wrong), \n",
+    "    # but the agent also adds its own Intrinsic Reward (Curiosity) internally.\n",
+    "    last_reward = -error \n",
     "    \n",
     "print(f\"📊 Day 1 Complete. Collected {len(agent.memory.memories)} memories.\")\n",
     "print(f\"   Day 1 Avg Error (First 50 steps): {np.mean(prediction_errors_day1[:50]):.4f}\")\n",
@@ -151,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8eee6a66",
    "metadata": {},
    "outputs": [
@@ -168,7 +176,7 @@
    ],
    "source": [
     "print(\"💤 Entering REM Sleep...\")\n",
-    "# Increased epochs from 50 to 200 for better convergence\n",
+    "# The agent will now use Prioritized Experience Replay to focus on the high-error moments from Day 1\n",
     "agent.dream(batch_size=32, epochs=200)\n",
     "print(\"✅ Dreaming complete. World Model updated.\")\n"
    ]
@@ -392,28 +400,27 @@
     "\n",
     "The graphs above reveal the fundamental mechanism of **memory consolidation**:\n",
     "\n",
-    "### The Untrained Model (Red Line - Day 1)\n",
+    "### The Active Agent (Red Line - Day 1)\n",
     "- Starts with modest error (~8 MSE)\n",
-    "- **Error explodes exponentially** as the agent moves through the state space\n",
-    "- By the end, prediction error reaches **300+ MSE**\n",
-    "- The untrained random network has learned **nothing** about the environment dynamics\n",
+    "- **Error fluctuates** as the agent encounters new states.\n",
+    "- Thanks to **Curiosity (Intrinsic Motivation)**, the agent is actively trying to learn online, so the error might not explode as badly as a purely random agent.\n",
+    "- However, online learning is noisy and unstable.\n",
     "\n",
-    "### The Trained Model (Green Line - Day 2)\n",
+    "### The Consolidated Agent (Green Line - Day 2)\n",
     "- Error remains **low and stable** throughout (~10-30 MSE)\n",
     "- The model accurately predicts the next state, even far into the future\n",
-    "- **~83% reduction** in average prediction error\n",
+    "- **Significant reduction** in average prediction error\n",
     "\n",
     "### Why This Matters\n",
     "1. **Predictive Power = Behavioral Advantage**: An agent that can accurately predict future states can plan better, respond to changes faster, and avoid dangerous outcomes\n",
-    "2. **Hippocampal Replay in Neuroscience**: During REM sleep, the hippocampus replays recent experiences ~100-1000x in compressed time. This is exactly what our `dream()` function does\n",
+    "2. **Prioritized Replay**: By focusing on the \"surprising\" events during sleep, the agent fixes its biggest mistakes first.\n",
     "3. **Systems Consolidation**: Repeated dreaming gradually transfers knowledge from the hippocampus (episodic memory) to the cortex (world model), creating a lasting internal model of reality\n",
     "\n",
     "### The Biological Parallel\n",
     "When humans sleep, we don't just rest—we consolidate learning. The brain replays experiences, strengthens important synapses, and prunes weak ones. This is why:\n",
     "- You remember facts better after sleep\n",
     "- Motor skills improve overnight (muscle memory consolidation)\n",
-    "- Dreams often reflect your recent experiences\n",
-    "\n"
+    "- Dreams often reflect your recent experiences\n"
    ]
   },
   {
